--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ twitter_username: talentdmrripley
 linkedin_username: cripley
 instagram_username: talentdmrripley
 youtube_username: cbr600rrip
+truncatewords: 20
 
 # Build settings
 markdown: kramdown
