--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ youtube_username: cbr600rrip
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-tactile
 plugins:
   - jekyll-feed
 include:
