--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,12 @@ plugins:
   - jekyll-feed
 include:
   - "_img"
+  
+# Disqus Comments
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: half-lifed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
