--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ youtube_username: cbr600rrip
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: jekyll-theme-minima
 plugins:
   - jekyll-feed
 include:
