--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Half-lifed.com
 email: overlandcoug@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Professional and personal development after turning 50.
+  This site is retired. Please join me at ripixl.com.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: talentdmrripley
