--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: talentdmrripley
 linkedin_username: cripley
 instagram_username: ripixl
+author: Chris Ripley
 
 # Build settings
 markdown: kramdown
