--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ include:
 disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-shortname: "half-lifed"
+shortname: half-lifed
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
